--- a/style.css
+++ b/style.css
@@ -2,22 +2,22 @@
 	width: 100vw;
 	height: 100vh;
 }
-.threeD-canvas {
+.three-container {
 	position: absolute;
 	top: 0;
-	margin-top: 20px;
-	right: 0;
-	background-color: rgba(32, 32, 32, 0.678);
-	width: 40vw;
-	height: 30vw;
+	left: 0;
+	z-index: 6;
+	background-color: transparent;
+	width: 100vw;
+	height: 100vh;
 	border-radius: 1em;
 }
 @media (max-width: 728px) {
 	.mp-canvas {
 		width: 728px;
 	}
-	.threeD-canvas {
-		width: 70vw;
-		height: 40vh;
+	.three-container {
+		width: 100vw;
+		height: 100vh;
 	}
 }
